package models;

public class Secretaria {

    public void gerarCurriculoSemestral() {
        
    }

    public void fecharMatriculas() {
       
    }

    public void atualizarDisciplinasNoCurriculo() {
    }

    
}
