package services;

import models.Aluno;
import models.Disciplina;

public class CancelamentoService {
    public void cancelarMatricula(Aluno aluno, Disciplina disciplina) {
    }
}
