package services;

import models.Professor;
import models.Disciplina;

public class ConsultaService {
    public void consultarAlunosMatriculados(Professor professor, Disciplina disciplina) {
        
    }
}
