package services;

public class FechamentoMatriculasService {
    public void fecharMatriculas() {
        // Lógica para fechar as matrículas
    }
}
