package services;

public class GeracaoCurriculoService {
    public void gerarCurriculo() {
  
    }
}
