package services;

import models.SistemaCobranca;

public class NotificacaoService {
    public void notificar(SistemaCobranca cobranca) {
  
    }
}
