@startuml

class Aluno {
    - String nome
    - int matricula
    + String getNome()
    + int getMatricula()
}

class Disciplina {
    - String nome
    - Professor professor
    - List<Aluno> alunosMatriculados
    - int MinAluno = 3
    - int MaxAluno = 60
    + String getNome()
    + Professor getProfessor()
    + List<Aluno> getAlunosMatriculados()
    + void matricularAluno(Aluno aluno)
    + boolean verificarMinAluno()
    + boolean verificarMaxAluno()
}

class Professor {
    - String nome
    - String departamento
    + String getNome()
    + String getDepartamento()
}

class Matricula {
    - Aluno aluno
    - Disciplina disciplina
    - Date dataMatricula
    + Aluno getAluno()
    + Disciplina getDisciplina()
    + Date getDataMatricula()
    + String toString()
}

class SistemaCobranca {
    + void gerarCobranca(Aluno aluno, Disciplina disciplina)
}

class Secretaria {
    + void gerarCurriculoSemestral()
    + void fecharMatriculas()
    + void atualizarDisciplinasNoCurriculo()
}

class MatriculaService {
    + Matricula matricularAluno(Aluno aluno, Disciplina disciplina)
}

class CancelamentoService {
    + void cancelarMatricula(Aluno aluno, Disciplina disciplina)
}

class ConsultaService {
    + void consultarAlunosMatriculados(Professor professor, Disciplina disciplina)
}

class FechamentoMatriculasService {
    + void fecharMatriculas()
}

class GeracaoCurriculoService {
    + void gerarCurriculo()
}

class NotificacaoService {
    + void notificarSistemaCobranca(SistemaCobranca cobranca)
}

Aluno "1" --> "0..*" Matricula
Disciplina "1" --> "0..*" Matricula
Professor "1" --> "0..*" Disciplina
Disciplina "1" --> "0..*" Aluno : "alunosMatriculados"
Disciplina "1" --> "1" Professor
MatriculaService --> Matricula
MatriculaService --> SistemaCobranca
MatriculaService --> Aluno
MatriculaService --> Disciplina
CancelamentoService --> Aluno
CancelamentoService --> Disciplina
ConsultaService --> Professor
ConsultaService --> Disciplina
NotificacaoService --> SistemaCobranca

@enduml
